# gtestdemo

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  test_main.cpp
math/: CMakeLists.txt  add.cpp  add.h
test_src/: mock.h  testdemo.cpp
utility/: CMakeLists.txt  utils.cpp  utils.h
